# odis-python

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: concept.rs  context.rs  drawing.rs  errors.rs  implication.rs  labelset.rs  lib.rs  titanic.rs
tests/: conftest.py  test_concepts.py  test_context.py  test_docs.py  test_drawing.py  test_exploration.py  test_iceberg.py  test_implications.py
